--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@ title: DHome
 ---
 
 <body>
-	<div class="container">HEllooooo</div>
+	<h1>DHome</h1>
+	<p>DHome is **free** smarthome ecosystem made to be used **inside** the home network</p>
+
+	<h2>Why DHome?</h2>
+
+	DHome is <bold>simple</bold> to set up. No need to <bold>register</bold> pointless accounts**.
+	DHome is <bold>open</bold>. You could solve everything <bold>yourself</bold, without spending time talking to tech support.
+	DHome is <bold>lightweight</bold. No nasty <bold>ads</bold>, no bloat.
+
+	<h2>Products</h2>
+	
+	<a clas="btn" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
 </body>
