--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ title: DHome
 
 <body>
 	<h1>DHome</h1>
-	<p>DHome is **free** smarthome ecosystem made to be used **inside** the home network</p>
+	<p>DHome is <b>free</b> smarthome ecosystem made to be used **inside** the home network</p>
 
 	<h2>Why DHome?</h2>
 
-	DHome is <bold>simple</bold> to set up. No need to <bold>register</bold> pointless accounts**.
-	DHome is <bold>open</bold>. You could solve everything <bold>yourself</bold, without spending time talking to tech support.
-	DHome is <bold>lightweight</bold. No nasty <bold>ads</bold>, no bloat.
+	DHome is <b>simple</b> to set up. No need to <b>register</b> pointless accounts.
+	DHome is <b>open</b>. You could solve everything <b>yourself</b>, without spending time talking to tech support.
+	DHome is <b>lightweight</b>. No nasty <b>ads</b>, no bloat.
 
 	<h2>Products</h2>
 	
