--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: DHome
 
 <body>
 	<h1>DHome</h1>
-	<p>DHome is <b>free</b> smarthome ecosystem made to be used **inside** the home network</p>
+	<p>DHome is <b>free</b> smarthome ecosystem made to be used <b>inside</b> the home network</p>
 
 	<h2>Why DHome?</h2>
 
