--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ title: DHome
 
 	<h2>Products</h2>
 	
-	<a class="btn" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
+	<a class="btn" style="background-image: linear-gradient(120deg, #155799, #159957);" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
 </body>
