--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: DHome
 ---
 
 <body>
+	<section class="page-header">
+		<a href="https://github.com/deeg05/dhome_android" class="btn">Android App</a>
+	</section>
+	
 	<h1>DHome</h1>
 	<p>DHome is <b>free</b> smarthome ecosystem made to be used <b>inside</b> the home network</p>
 
