--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@ title: DHome
 ---
 
 <body>
-	<section class="page-header">
-		<a href="https://github.com/deeg05/dhome_android" class="btn">Android App</a>
-	</section>
 	
 	<h1>DHome</h1>
 	<p>DHome is <b>free</b> smarthome ecosystem made to be used <b>inside</b> the home network</p>
@@ -17,9 +14,11 @@ title: DHome
 	DHome is <b>open</b>. You could solve everything <b>yourself</b>, without spending time talking to tech support.
 	DHome is <b>lightweight</b>. No nasty <b>ads</b>, no bloat.
 
-	<h2>Products</h2>
-	
-	<a class="btn" style="background-image: linear-gradient(120deg, #155799, #159957);" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
-	<a class="btn" style="background-image: linear-gradient(120deg, #155799, #159957);" href="http://deeg05.github.io/dhome_climate">Climate</a>
-	<a class="btn" style="background-image: linear-gradient(120deg, #155799, #159957);" href="http://deeg05.github.io/dhome_lock">Lock</a>
+	<h2>Our products</h2>
+	<section class="page-header">linear-gradient(120deg, #155799, #159957)
+		<a href="https://github.com/deeg05/dhome_android" class="btn">Android App</a>		
+		<a class="btn" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
+		<a class="btn" href="http://deeg05.github.io/dhome_climate">Climate</a>
+		<a class="btn" href="http://deeg05.github.io/dhome_lock">Lock</a>
+	</section>
 </body>
