--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: DHome
 	DHome is <b>lightweight</b>. No nasty <b>ads</b>, no bloat.
 
 	<h2>Our products</h2>
-	<section class="page-header">linear-gradient(120deg, #155799, #159957)
+	<section class="page-header">
 		<a href="https://github.com/deeg05/dhome_android" class="btn">Android App</a>		
 		<a class="btn" href="http://deeg05.github.io/dhome_lightswitch">Lightswitch</a>
 		<a class="btn" href="http://deeg05.github.io/dhome_climate">Climate</a>
