--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: DHome
 
 	DHome is <b>simple</b> to set up. No need to <b>register</b> pointless accounts.
 	DHome is <b>open</b>. You could solve everything <b>yourself</b>, without spending time talking to tech support.
-	DHome is <b>lightweight</b>. No nasty <b>ads</b>, no bloat.
+	DHome is <b>lightweight</b>. No nasty <b>ads</b>, no <b>bloat</b>.
 
 	<h2>Our products</h2>
 	<section class="page-header">	
